<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/score7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:padding="5dp"
        android:text="@string/score1"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ff0000"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/score8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:text="@string/score2"
        android:padding="5dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FFD700"
        android:background="@drawable/border"
        app:layout_constraintStart_toEndOf="@+id/score7"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/l1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#200A3B"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:text="@string/obj1"
        android:textAlignment="center"
        android:textSize="19sp"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="390dp"
        android:layout_height="279dp"
        app:cardBackgroundColor="#DDCEB1"
        app:layout_constraintBottom_toTopOf="@+id/girl12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/q12"
            android:textColor="#1A0A2D"
            android:textSize="22.5sp"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="375dp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="176dp"
            android:layout_height="165dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/girl" />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/boy12"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:text="बालः"
        android:textAlignment="center"
        android:textSize="30sp"
        app:backgroundTint="#00B8D4"
        app:layout_constraintBottom_toTopOf="@+id/nxt2"
        app:layout_constraintEnd_toStartOf="@+id/girl12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/girl12"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="बाला"
        android:textAlignment="center"
        android:textSize="30sp"
        app:backgroundTint="#00B8D4"
        app:layout_constraintBottom_toTopOf="@+id/nxt2"
        app:layout_constraintEnd_toStartOf="@+id/fruit12"
        app:layout_constraintStart_toEndOf="@+id/boy12"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/fruit12"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="फलः"
        android:textSize="30sp"
        app:backgroundTint="#00B8D4"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/nxt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/girl12"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/back12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:backgroundTint="#00BFA5"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nxt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boy12" />

    <Button
        android:id="@+id/nxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:backgroundTint="#00BFA5"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        app:layout_constraintStart_toEndOf="@+id/back12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruit12" />


</androidx.constraintlayout.widget.ConstraintLayout>