<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05A800"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/score9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:padding="5dp"
        android:text="@string/score1"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ff0000"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/score10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:text="@string/score2"
        android:padding="5dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FFD700"
        android:background="@drawable/border"
        app:layout_constraintStart_toEndOf="@+id/score9"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="356dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:background="#05A800"
        android:gravity="center"
        android:text="@string/correct"
        android:textColor="#FCFCFD"
        android:textSize="30sp"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="184dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/sanskritTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/girl1" />

    <com.example.aksharas.quiz.SanskritTextView
        android:id="@+id/sanskritTextView"
        android:layout_width="90dp"
        android:layout_height="56dp"
        android:text="बाला"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toStartOf="@id/girlsound"
        app:layout_constraintBottom_toTopOf="@+id/textViews1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/girlsound"
        android:layout_width="66dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="14dp"
        android:background="#9B989D"
        app:layout_constraintBottom_toTopOf="@+id/textViews1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sanskritTextView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    <TextView
        android:id="@+id/textViews1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="लिङ्ग = स्त्रीलिंग"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sanskritTextView" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:text="@string/girl"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/nxtg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViews1" />

    <Button
        android:id="@+id/nxtg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:text="@string/next"
        android:textColor="@color/white"
        app:backgroundTint="#05A800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />


</androidx.constraintlayout.widget.ConstraintLayout>