<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#90ee98"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="@string/score1"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/score2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:background="@drawable/border"
        android:padding="5dp"
        android:text="@string/score2"
        android:textColor="#FFD700"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/score1"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/l1"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#200A3B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:text="@string/obj1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/boy1"
        android:layout_width="108dp"
        android:layout_height="303dp"
        android:layout_marginStart="10dp"
        android:background="#90ee98"
        android:src="@drawable/boy1"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/girl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/girl1"
        android:layout_width="108dp"
        android:layout_height="303dp"
        android:src="@drawable/girl1"
        android:background="#90ee98"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fruit1"
        app:layout_constraintStart_toEndOf="@+id/boy1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fruit1"
        android:layout_width="108dp"
        android:layout_height="303dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/fruit1"
        android:background="#90ee98"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/girl1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="550dp"
        android:text="Choose the boy"
        android:fontFamily="@font/feather_bold_by_typicalbro44_dee263c"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

